<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Easy Tracker</string>

    <!-- Menu Strings -->
    <string name="load_profile_menu">Carregar Perfil</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="new_profile_menu">Novo Perfil</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Primeiro Fragmento</string>
    <string name="second_fragment_label">Segundo Fragmento</string>
    <string name="next">Próximo</string>
    <string name="previous">Anterior</string>

    <!-- Welcome -->
    <string name="welcome_fragment_title">Start Tracker</string>
    <string name="welcome_fragment_button">Iniciar</string>
    <string name="welcome_fragment_text">Bem vindo ao Aplicativo! Você deverá preencher a próxima tela com
        suas informações de localização, e então você poderá iniciar o rastreio de estrelas.
        \n
        \nAntes de começar, ligue a plataforma <i>Easy Tracker</i> e ative o bluetooth do seu dispositivo para realizar o pareamento.
        \n
        \n<b>O nome para parear deverá ser <i>HC-05</i> e a senha padrão é <i>1234</i>.</b>
        \n
        \nApós o pareamento você pode começar a usar este aplicativo clicando no botão abaixo.
        Em caso de dúvidas, cheque o menu de Instruções. Boa sorte!
    </string>

    <!-- New Profile -->
    <string name="add_profile_name">Nome do Perfil:</string>
    <string name="add_profile_declination_hint">xx.xx</string>
    <string name="add_profile_gps_hint">xx.xxxxxxxx</string>
    <string name="add_profile_latitude">Latitude:</string>
    <string name="add_profile_declination">Declinação Magnética:</string>
    <string name="add_profile_bluetooth">Conexão Bluetooth:</string>

    <string name="add_profile_bluetooth_button">Selecionar Dispositivo</string>
    <string name="current_profile_bluetooth_button">Conectar</string>
    <string name="name_hint">Nome</string>
    <string name="nome_do_perfil_de_localiza_o">Nome do Perfil de Localização:</string>

    <!-- Start Profile -->
    <string name="profile_start_button">Iniciar Alinhamento</string>
    <string name="profile_instructions_check">
        Cheque se os valores acima estão corretos e então você
        poderá iniciar o alinhamento do seu dispositivo.
    </string>
    <string name="start_aligment">Iniciar Alinhamento</string>

    <!-- Edit Profile -->

    <string name="clearProfile">Deletar Perfil</string>

    <!-- Load Profiles -->
    <string name="clearProfiles">Deletar Perfis</string>


    <!-- Concluido Button -->
    <string name="ok_button">Concluído</string>

    <!-- Alignemnt -->
    <string name="alignment_instruction">Incline a plataforma para esquerda/direta/frente/trás para nivelá-la</string>

    <!-- Polar -->
    <string name="polar_instruction">Movimente horizontalmente a plataforma para alinhá-la com o polo Norte</string>


    <!-- Tilt -->
    <string name="tilt_instruction">Incline a plataforma para frente/trás para ajustar elevação</string>


    <!-- end Alignment -->
    <string name="congrats_instruction">Parabéns, você alinhou seu dispositivo. Agora, você pode iniciar o rastreamento!</string>
    <string name="end_instruction">
        Para ativar/desativar o sistema, você pode manualmente precionar o botão vermelho localizado na parte inferior do Easy Tracker.

        \n\nRecomendamos, no entanto, que você faça o controle precionando os botões abaixo, dessa forma você não corre o risco de desalinhar o sistema.

        \n\nConsulte o menu instruções para mais informações e boa sorte. Clear Skies!
    </string>
    <string name="start_track_button">Iniciar Rastreamento</string>
    <string name="end_track_button">Parar Rastreamento</string>

    <!-- Debug -->
    <string name="debug_fragment_title">Debug</string>
    <string name="debug_fragment_1">Inicie a Debugação!</string>

    <!-- About -->
    <string name="about_fragment_title">Sobre</string>
    <string name="about_us">Este aplicativo foi criado para ser utilizado juntamente
        com o Easy Tracker System, desenvolvido na Universidade Federal de Santa Maria.
        \n
        \nDesenvolvedor: Eugênio Pozzobon
        \nOrientador: Prof. Rafael Beltrame
        \n
        \n<a href="https://github.com/Eugenio-Pozzobon/Easy-Tracker-System#desenvolvimento-de-uma-plataforma-equatorial-para-astrofotografia---easy-tracker-system">Cheque a documentação do sistema eletrônico clicando aqui</a>
        \n
        \n<a href="https://github.com/Eugenio-Pozzobon/Easy-Tracker-Android-App#easy-tracker-android-app">Cheque a documentação do aplicativo android clicando aqui</a>
        </string>

    <!-- How to Use Fragment -->
    <string name="howtouse_fragment_title">Instruções</string>
    <string name="howtouse_fragment_1">Aqui você saberá como mexer no aplicativo</string>

    <!-- Extra -->

    <string name="todo_string">TODO</string>
    <string name="deletar_perfil_button">Deletar Perfil</string>
    <string name="button_confirm_edit">Confirmar Alterações</string>


    <string name="end_alignment_title">(4/4) Finalizar e Rastrear</string>
    <string name="tilt_alignment_title" tools:ignore="TypographyFractions">(3/4) Elevação</string>
    <string name="polar_alignment_title">(2/4) Azimute</string>
    <string name="level_alignment_title" tools:ignore="TypographyFractions">(1/4) Nível</string>
    <string name="north">N</string>
    <string name="sulfix_grausdecimais">(DD)</string>
    <string name="mag_degree">°</string>

    <string name="connect_status_sucessfull">Conectado</string>
    <string name="connect_status_init">Conectar</string>
    <string name="connecting_status">Conectando</string>
    <string name="settings_fragment_title">Configurações</string>

    <string name="fail_connection">Não foi possível se conectar com o dispositivo.
        \nVocê deseja se reconectar?</string>

    <string name="bt_snack_action">Reconectar</string>
    <string name="calibrate">Calibrar Bússola</string>
    <string name="reconnect">Reconectar</string>
    <string name="done_connection">Conectado!</string>
    <string name="calibrate_compass_title">Calibrar Bússola</string>
    <string name="calibrating_compass_title">Calibrando Bússola</string>
    <string name="calibrating_compass_text1">Rotacione horizontalmente a plataforma pelos próximos</string>
    <string name="calibrating_compass_text2">segundos.
        \n\nAtenção, não aproxime seu smartphone, ou qualquer outro eletrônico,
        perto da plataforma, durante a calibração.</string>

    <string name="calibrate_compass_message">Recomendamos que você realize a calibração da bússola
        para evitar erros uma vez que você ainda não executou a calibração.
        \n\nAtenção, você não poderá parar a calibração no meio do processo.</string>
    <string name="decline_calibrate">Recusar</string>
    <string name="accept_calibrate">Calibrar</string>
    <string name="blutooth_error_title">Easy Tracker Desconectado</string>
    <string name="forcing_disconnection">Easy Tracker Disconnected</string>
    <string name="see_profile">Ver perfil</string>
    <string name="reconnecting">Reconectando</string>
    <string name="tracking">…rastreando…</string>
    <string name="tracking_bt_problem">Timer Interrompido</string>
    <string name="tracking_timer">Duração do rastreio:</string>

    <string name="tracking_start_timer">Rastreio iniciado às:</string>
    <string name="reconnect_to_go">Reconecte para prosseguir!</string>


    <!--    FAQ QUESTIONS AND ANSWERS -->
    <string name="faq1">1. Como pegar as coordenadas GPS de outro lugar:</string>
    <string name="faq2">2. O que é declinação magnética:</string>
    <string name="faq3">3. Como pegar a declinação magnética:</string>
    <string name="faq4">4. Falhas de conexão com o sistema:</string>

    <string name="faq_ans1">Acesse o Google Maps e pressione na localização que deseja até exibir um marcador.
        Cheque as informações da barra inferior para copiar as informações de latitude e longitude.</string>

    <string name="faq_ans2">Declinação magnética é a diferença entre o norte magnético e o norte geográfico real do planeta.
        Ela existe devido as inúmeras interferências que o campo magnético sofre e o valor é diferente para cada região do planeta.</string>

    <string name="faq_ans3">Para calcular a Declinação magnética na localização que deseja, clique aqui e preencha com suas informações.</string>

    <string name="faq_ans4">Em caso de problemas de conexão recomenda-se reiniciar o aplicativo e reiniciar o sistema eletrônico. Se o problema persistir, aperte o botão presente no HC-05 por 1 segundo.</string>
    <string name="gps_verbose">O App está usando sua localização atual para efetuar os cálculos de declinação magnética!</string>
    <string name="gps_marker_call">Você pode clicar no marcador rotativo para pegar sua localização atual automaticamente.</string>
    <string name="paired_fragment_title">Dispositivos Pareados</string>


</resources>