<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1">
        <item
            android:id="@+id/newProfileFragment"
            android:orderInCategory="100"
            android:icon="@drawable/new_vector"
            android:title="@string/new_profile_menu"/>
        <item
            android:id="@+id/loadProfilesFragment"
            android:orderInCategory="101"
            android:icon="@drawable/load_vector"
            android:title="@string/load_profile_menu" />
    </group>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/debugFragment"
            android:orderInCategory="102"
            android:icon="@drawable/debug_vector"
            android:title="@string/debug_fragment_title" />
        <item
            android:id="@+id/settingsFragment"
            android:orderInCategory="102"
            android:icon="@drawable/settings_vector"
            android:title="@string/settings_fragment_title" />
    </group>

    <group android:id="@+id/grp3">
        <item
            android:id="@+id/howToUseFragment"
            android:orderInCategory="103"
            android:icon="@drawable/question_vector"
            android:title="@string/howtouse_fragment_title" />
        <item
            android:id="@+id/aboutFragment"
            android:orderInCategory="104"
            android:icon="@drawable/about_vector"
            android:title="@string/about_fragment_title" />
    </group>
</menu>