<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="editProfileViewModel"
            type="com.example.startracker.newprofile.EditProfileViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".newprofile.NewProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textProfileName"
                android:layout_width="275dp"
                android:layout_height="59dp"

                android:layout_marginTop="8dp"

                android:autofillHints=""
                android:hint="@string/add_profile_name"

                android:textColorHint="@color/white"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/white"

                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:text="@={editProfileViewModel.profileName}"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_gps"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/todo_string"
                android:scaleType="fitCenter"
                android:src="@drawable/map_vector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textProfileName" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_gps">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/gps_number"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="4dp"

                    android:hint="@string/add_profile_latitude"
                    app:hintEnabled="true"
                    android:inputType="numberDecimal"

                    app:suffixText="@string/sulfix_grausdecimais"

                    android:textColorHint="@color/white"
                    app:hintTextColor="@color/white"

                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/white"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/image_gps_circle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal"
                        android:text="@={editProfileViewModel.gpsData}"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/image_gps_circle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/todo_string"
                    android:src="@drawable/gps_circle_vector"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/gps_number"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/image_declination"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/todo_string"
                android:src="@drawable/magnetic_field_vector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/declination_number"
                android:layout_width="230dp"
                android:layout_height="60dp"

                android:layout_marginTop="8dp"

                android:autofillHints=""
                android:hint="@string/add_profile_declination"

                android:inputType="numberDecimal"
                app:suffixText="@string/mag_degree"
                android:textColorHint="@color/white"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/white"

                app:hintTextColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/image_declination">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:text="@={editProfileViewModel.magDeclination}"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_question_vector"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="7dp"
                android:contentDescription="@string/todo_string"
                android:src="@drawable/question_vector"
                app:layout_constraintBottom_toBottomOf="@+id/declination_number"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toEndOf="@+id/declination_number"
                app:layout_constraintTop_toTopOf="@+id/declination_number" />


            <Button
                android:id="@+id/button_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:onClick="@{() -> editProfileViewModel.onEdit()}"
                android:text="@string/button_confirm_edit"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/declination_number" />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/deletar_perfil_button"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:onClick="@{() -> editProfileViewModel.onDelete()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_edit" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>